<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.hylh.scooterstg.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_title_head" />

    <com.hylh.scooterstg.view.CustomerScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/devid"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:hint="@string/et_devid_hint"
                    android:inputType="text"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/dev_code"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:hint="@string/et_dev_code_hint"
                    android:inputType="textPassword|number"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/dev_name"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:hint="@string/et_dev_name_hint"
                    android:inputType="text"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/dev_phone"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:hint="@string/et_dev_phone_hint"
                    android:inputType="phone"
                    android:padding="5dp" />
            </LinearLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/login_btn"
                android:text="@string/register_send"
                android:textColor="@color/whites"
                android:textSize="18sp" />
        </LinearLayout>
    </com.hylh.scooterstg.view.CustomerScrollView>

</RelativeLayout>